--- a/Django/item_tracker/tracker/templates/inquiry.html
+++ b/Django/item_tracker/tracker/templates/inquiry.html
@@ -17,7 +17,7 @@
             <div class="text-center mb-5">
                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                 <h1 class="fw-bolder">お問い合わせ</h1>
-                <p class="lead fw-normal text-muted mb-0">We'd love to hear from you</p>
+                <p class="lead fw-normal text-muted mb-0">お問い合わせは以下のフォームをご利用ください。</p>
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6">
