教科書 chap10 コピペ

--- a/Django/item_tracker/tracker/templates/index.html
+++ b/Django/item_tracker/tracker/templates/index.html
@@ -16,7 +16,7 @@
                     <h1 class="display-5 fw-bolder text-white mb-2">現代のビジネス向けのブートストラップ5テンプレート</h1>
                     <p class="lead fw-normal text-white-50 mb-4">世界で最も人気のあるフロントエンドのオープンソースツールキットであるBootstrapを使用して、レスポンシブモバイルファーストサイトをすばやく設計およびカスタマイズします！</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#!">ログイン</a>
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="{% url 'account_login' %}">ログイン</a>
                         <a class="btn btn-outline-light btn-lg px-4" href="#features">もっと詳しく知る</a>
                     </div>
                 </div>
