--- a/Django/item_tracker/tracker/templates/base.html
+++ b/Django/item_tracker/tracker/templates/base.html
@@ -33,6 +33,14 @@
                             <li class="nav-item"><a class="nav-link {% block active_index %}{% endblock %}" href="{% url 'tracker:index' %}">ホーム</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> -->
                             <li class="nav-item"><a class="nav-link {% block active_inquiry %}{% endblock %}" href="{% url 'tracker:inquiry' %}">問い合わせ</a></li>
+                            
+                            {% if user.is_authenticated %}
+                                <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a></li>
+                            {% else %}
+                                <li class="nav-item"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
+                                <li class="nav-item"><a class="nav-link {% block active_login %}{% endblock %}" href="{% url 'account_login' %}">ログイン</a></li>
+                            {% endif %}
+
                             <!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li> -->
                             <!-- <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
                             <!-- <li class="nav-item dropdown">
