--- a/Django/item_tracker/accounts/templates/account/login.html
+++ b/Django/item_tracker/accounts/templates/account/login.html
@@ -6,25 +6,52 @@
 {% block active_login %}active{% endblock %}
 
 {% block contents %}
-<div class="container">
-    <div class="row">
-        <div class="my-div-style">
-            <h1>ログイン</h1>
-            <form method="post" action="{% url 'account_login' %}">
-                {% csrf_token %}
+<section class="py-5">
+    <div class="container px-5">
+        <!-- Contact form-->
+        <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+        <!-- <div class="my-div-style"> -->
+            <div class="text-center mb-5">
+                <h1>ログイン</h1>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-8 col-xl-6">
+                    <form method="post" id="contactForm" action="{% url 'account_login' %}">
+                        {% csrf_token %}
 
-                <div class="mb-4 col-4">
-                    {% bootstrap_form form %}
+                        <!-- {% bootstrap_form form %} -->
+                        {{ form.non_field_errors }}
+
+                        {% for field in form %}
+                            {% if field.id_for_label != "id_remember" %}
+                                <div class="form-floating mb-3">
+                                    <input type="{{ field.type }}" name="{{ field.name }}" class="form-control" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
+                                    {{ field.errors }}
+                                    <label for="{{ field.id_for_label }}">
+                                        {{ field.label }}
+                                    </label>
+                                </div>
+                            {% else %}
+                                <div class="form-check mb-3">
+                                    <input type="checkbox" name="{{ field.name }}" class="form-check-input" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
+                                    <label for="{{ field.id_for_label }}" class="form-check-label">
+                                        {{ field.errors }}
+                                        {{ field.label }}
+                                    </label>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if redirect_field_value %}
+                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                        {% endif %}
+                        
+                        <div class="d-grid mb-3"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">ログイン</button></div>
+                        <p><a class="button secondaryAction" href="{% url 'account_reset_password' %}">パスワードを忘れましたか？</a></p>
+                    </form>
                 </div>
-
-                {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                {% endif %}
-                
-                <button class="btn btn-primary" type="submit">ログイン</button>
-                <p><a class="button secondaryAction" href="{% url 'account_reset_password' %}">パスワードを忘れましたか？</a></p>
-            </form>
+            </div>
         </div>
     </div>
-</div>
+</section>
 {% endblock %}
