--- a/Django/item_tracker/accounts/templates/account/login.html
+++ b/Django/item_tracker/accounts/templates/account/login.html
@@ -23,19 +23,35 @@
                         {{ form.non_field_errors }}
 
                         {% for field in form %}
-                            {% if field.id_for_label != "id_remember" %}
+                            {% if field.id_for_label == "id_email" %}
                                 <div class="form-floating mb-3">
-                                    <input type="{{ field.type }}" name="{{ field.name }}" class="form-control" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
+                                    <input type="email" name="{{ field.name }}" class="form-control" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
                                     {{ field.errors }}
                                     <label for="{{ field.id_for_label }}">
                                         {{ field.label }}
                                     </label>
                                 </div>
-                            {% else %}
+                            {% elif field.id_for_label == "id_password" %}
+                                <div class="form-floating mb-3">
+                                    <input type="password" name="{{ field.name }}" class="form-control" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
+                                    {{ field.errors }}
+                                    <label for="{{ field.id_for_label }}">
+                                        {{ field.label }}
+                                    </label>
+                                </div>
+                            {% elif field.id_for_label == "id_remember" %}
                                 <div class="form-check mb-3">
-                                    <input type="checkbox" name="{{ field.name }}" class="form-check-input" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
+                                    <input type="checkbox" name="{{ field.name }}" class="form-check-input" placeholder="{{ field.label }}" id="{{ field.id_for_label }}">
                                     <label for="{{ field.id_for_label }}" class="form-check-label">
                                         {{ field.errors }}
+                                        {{ field.label }}
+                                    </label>
+                                </div>
+                            {% else %}
+                                <div class="form-floating mb-3">
+                                    <input type="text" name="{{ field.name }}" class="form-control" placeholder="{{ field.label }}" required id="{{ field.id_for_label }}">
+                                    {{ field.errors }}
+                                    <label for="{{ field.id_for_label }}">
                                         {{ field.label }}
                                     </label>
                                 </div>
