--- a/Django/item_tracker/tracker/templates/asset_list.html
+++ b/Django/item_tracker/tracker/templates/asset_list.html
@@ -13,9 +13,11 @@
 {% block contents %}
 <!-- Section-->
 <section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
+    <div class="container px-4 px-lg-5 mt-3">
+        <div class="d-flex justify-content-end mb-4">
+            <a class="btn btn-primary float-right" href="#">新規作成</a>
+        </div>
         <div class="row gx-4 gx-lg-5 row-cols-1 justify-content-center">
-        <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-sm-1 justify-content-center"> -->
             <div class="col-sm-6 mb-5">
                 <div class="card h-50">
                     <!-- Product image-->
