--- a/Django/item_tracker/tracker/templates/base.html
+++ b/Django/item_tracker/tracker/templates/base.html
@@ -35,9 +35,10 @@
                             <li class="nav-item"><a class="nav-link {% block active_inquiry %}{% endblock %}" href="{% url 'tracker:inquiry' %}">問い合わせ</a></li>
                             
                             {% if user.is_authenticated %}
-                                <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a></li>
+                                <li class="nav-item"><a class="nav-link {% block active_asset_list %}{% endblock %}" href="{% url 'tracker:asset_list' %}">管理項目一覧</a></li>
+                                <li class="nav-item ms-lg-3"><a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a></li>
                             {% else %}
-                                <li class="nav-item"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
+                                <li class="nav-item ms-lg-3"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
                                 <li class="nav-item"><a class="nav-link {% block active_login %}{% endblock %}" href="{% url 'account_login' %}">ログイン</a></li>
                             {% endif %}
 
