詳細ページ作成

--- a/Django/item_tracker/tracker/templates/asset_detail.html
+++ b/Django/item_tracker/tracker/templates/asset_detail.html
@@ -6,19 +6,7 @@
 {% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
-<div class="container my-div-style">
-    {% if extra.image %}
-        <img src="{{ extra.image.url }}" width="400" height="300"/>
-    {% else %}
-        {{ extra }}
-    {% endif %}<br>
-
-    {{ extra }}<br>
-    {{ item_list }}<br>
-    {{ object }}<br>
-    
-    <hr>
-
+<div class="container my-5">
     <div class="row">
         <div class="col-3">
             <strong>管理名</strong>
@@ -35,6 +23,9 @@
             <strong>アイテム一覧</strong>
         </div>
         <div class="col-9">
+            {% for item in item_list %}
+                <span class="mx-2">{{ item.item_name }}</span>
+            {% endfor %}
         </div>
     </div>
     
@@ -46,12 +37,12 @@
         </div>
         <div class="col-3">
             {% if object.image %}
-                <img src="{{ object.image.url }}" width="200" height="200"/>
+                <img src="{{ object.image.url }}" width="600" height="400"/>
             {% endif %}
         </div>
     </div>
 
-    <hr>
+    <!-- <hr>
 
     <div class="row">
         <div class="col-3">
@@ -70,6 +61,6 @@
         <div class="col-9">
             {{ object.updated_at }}
         </div>
-    </div>
+    </div> -->
 </div>
 {% endblock %}
