Assetがenptyの場合の表示を追加

--- a/Django/item_tracker/tracker/templates/asset_list.html
+++ b/Django/item_tracker/tracker/templates/asset_list.html
@@ -25,6 +25,9 @@
                 {% endif %}
             </a>
             <p>{{ image.asset.asset_name }}</p>
+
+            {% empty %}
+            <p>管理項目がありません。</p>
         {% endfor %}
         <p>{{ image_list }}</p>
         <div class="row gx-4 gx-lg-5 row-cols-1 justify-content-center">
