--- a/Django/item_tracker/tracker/templates/item_add.html
+++ b/Django/item_tracker/tracker/templates/item_add.html
@@ -7,6 +7,7 @@
 
 {% block contents %}
 <div class="container my-5">
+    <img src="{{ image.url }}" width="600" height="400"/>
     <div class="row">
         <form method="POST" enctype='multipart/form-data'>
             {% csrf_token %}
