history_add.html編集

--- a/Django/item_tracker/tracker/templates/4index.html
+++ b/Django/item_tracker/tracker/templates/4index.html
@@ -78,6 +78,7 @@
 
         // 選択済みのバウンディングボックスを描画
         function draw_box(order) {
+        console.log(order);
             ctx.strokeStyle = "blue"; // 青い線で描画
             
             for (let i = 0; i < check.length; i++) {
