--- a/Django/item_tracker/tracker/templates/history_add.html
+++ b/Django/item_tracker/tracker/templates/history_add.html
@@ -24,7 +24,7 @@
     <hr>
 
     {% for item in items %}
-    <div class="row w-75 m-2">
+    <div class="row m-2">
         <div class="col-auto" style="width: 18%;">
             <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check">
             <label class="btn btn-outline-primary" for="check_{{ forloop.counter0 }}" style="width: 100%;" onclick="del_box('{{ forloop.counter0 }}');">
@@ -50,11 +50,11 @@
 
     <hr>
 
-    <input class="form-check-input" type="checkbox" id="finish" required onclick="submit_check(finish.checked);">
+    <input class="form-check-input" type="checkbox" id="finish" onclick="submit_check(finish.checked);">
     <form method="POST" enctype='multipart/form-data'>
         {% csrf_token %}
         <table class="table">
-            {{ result_add_form }}
+            {{ result_add_form.as_table }}
         </table>
         <button class="btn btn-primary" type="submit" id="submit" disabled>作成</button>
     </form>
