--- a/Django/item_tracker/accounts/templates/account/login.html
+++ b/Django/item_tracker/accounts/templates/account/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
+{% load static %}
 
 {% block title %}Log In | ないもの検知{% endblock %}
 
@@ -12,6 +13,7 @@
         <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
         <!-- <div class="my-div-style"> -->
             <div class="text-center mb-5">
+                <div class="bg-gradient text-white rounded-3 mb-3"><img src="{% static 'assets/login.png' %}" alt="" width="50" height="50"></div>
                 <h1>ログイン</h1>
             </div>
             <div class="row gx-5 justify-content-center">
@@ -62,6 +64,12 @@
                             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                         {% endif %}
                         
+
+                        <div class="form-check mb-3">
+                            <input type="checkbox" name="personal_use" class="form-check-input" id="personalUse" style="display: none;" checked>
+                            <!-- <input type="checkbox" name="personal_use" class="form-check-input" id="personalUse"> -->
+                            <!-- <label for="personalUse" class="form-check-label">個人利用</label> -->
+                        </div>
                         <div class="d-grid mb-3"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">ログイン</button></div>
                         <p><a class="button secondaryAction" href="{% url 'account_reset_password' %}">パスワードを忘れましたか？</a></p>
                     </form>
@@ -71,3 +79,4 @@
     </div>
 </section>
 {% endblock %}
+
