--- a/Django/item_tracker/tracker/templates/base.html
+++ b/Django/item_tracker/tracker/templates/base.html
@@ -36,6 +36,7 @@
                             
                             {% if user.is_authenticated %}
                                 <li class="nav-item"><a class="nav-link {% block active_asset_list %}{% endblock %}" href="{% url 'tracker:asset_list' %}">管理項目一覧</a></li>
+                                <li class="nav-item ms-lg-3"><a class="nav-link" href="{% url 'tracker:mypage' %}">グループ一覧</a></li>
                                 <li class="nav-item ms-lg-3"><a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a></li>
                             {% else %}
                                 <li class="nav-item ms-lg-3"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
